--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,7 +11,8 @@
   "dependencies": {
     "@polkadot/api": "^9.2.1",
     "i": "^0.3.7",
-    "moonbeam-types-bundle": "file:moonbeam-types-bundle-2.0.8.tgz",
-    "npm": "^8.17.0"
+    "npm": "^8.17.0",
+    "ts-node": "9.1",
+    "typescript": "^3.9.6"
   }
 }
